--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,11 @@
 .textFieldError {
     border: 5px solid #f44336 !important; /* Red border for errors */
 }
+*{
+    font-family: 'Sofia Pro', sans-serif!important;
+    font-weight: 300;
 
+}
 .textFieldWrapper {
     position: relative;
 }
