--- a/src/components/index.module.scss
+++ b/src/components/index.module.scss
@@ -28,7 +28,7 @@
         box-sizing: border-box;
         list-style: none;
         color: var(--primary-color);
-        font-family: 'Sofia Pro', sans-serif;
+        font-family: "Sofia Pro", sans-serif;
 
         font-weight: 300;
         z-index: 7;
@@ -37,7 +37,7 @@
             font-size: 16px;
             line-height: 27px;
         }
-        @media(max-width:765px){
+        @media (max-width: 765px) {
             text-align: center;
         }
     }
@@ -51,11 +51,10 @@
         text-decoration: none;
         box-sizing: border-box;
         list-style: none;
-        font-family: 'Sofia Pro', sans-serif;
+        font-family: "Sofia Pro", sans-serif;
         @media (max-width: 992px) {
             font-size: 36px;
             line-height: 40px;
-           
         }
         @media (max-width: 766px) {
             font-size: 30px;
@@ -106,6 +105,14 @@
             margin-bottom: 8px;
         }
         padding: 20px;
+        .error {
+            display: flex;
+            border: 1px solid red !important;
+            div {
+                background: transparent !important;
+            }
+        }
+        
 
         label {
             z-index: 2;
@@ -115,13 +122,13 @@
             font-weight: 400;
             color: #354050;
             line-height: 20px;
-            font-family: 'Sofia Pro', sans-serif;
+            font-family: "Sofia Pro", sans-serif;
         }
         > div {
             width: 100%;
             position: relative;
             height: 36px;
-            border: 1px solid #849ab4;
+            border: 1px solid #849ab4!important;
             border-color: inherit;
             border-radius: 6px;
             font-size: inherit;
@@ -165,7 +172,7 @@
             padding: 15px 35px;
             cursor: pointer;
             transition: 0.3s;
-            font-family: 'Sofia Pro', sans-serif;
+            font-family: "Sofia Pro", sans-serif;
             font-weight: 300;
             z-index: 1;
             @media (max-width: 400px) {
@@ -282,7 +289,7 @@
 .error {
     display: flex;
     border: 1px solid red !important;
-    div{
-        background: transparent!important;
+    div {
+        background: transparent !important;
     }
 }
